droneci/argocd-files/droneci-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: droneci
  labels:
    app.kubernetes.io/name: drone-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
    spec:
      serviceAccountName: drone-runner
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        resources:
          requests:
            memory: "400Mi"
            cpu: "250m"
          limits:
            memory: "800Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
